--- a/unit-test.html
+++ b/unit-test.html
@@ -9,8 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.min.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-    <script src="roman.js"></script>
-    <script src="unitTest.js"></script>
+    <script src="js/roman.js"></script>
+    <script src="js/unitTest.js"></script>
 
     <script>
       mocha.run();
